# trygit

./: .gitignore  index.js  main.py  pyproject.toml  readme.md  some.html  some.py  style.css  tewst
