[tool.poetry]
name = "trygit"
version = "0.1.0"
description = ""
authors = ["DespiseMeZXC <2003lesha2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
